--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,27 +1,31 @@
-nginx:
-    #image: nginx:mainline-alpine
-    build: .
-    dockerfile: nginx-1.11.3-alpine.dockerfile
-    volumes:
-        - ./html:/var/www/html:ro
-        - ./nginx/conf/nginx.conf:/etc/nginx/nginx.conf:ro
-        - ./nginx/conf.d:/etc/nginx/conf.d:ro
-    ports:
-        - 80:80
-        - 443:443
-    links:
-        - php
+version: '2'
 
-php:
-    image: php:fpm-alpine
-    volumes:
-        - ./html:/var/www/html
-    links:
-        - db
-
-db:
-    image: mariadb:10.1
-    volumes:
-        - /var/lib/mysql:/var/lib/mysql
-    env_file:
-        - ./mariadb.config.env
+services:
+    nginx:
+        build: 
+            context: .
+            dockerfile: nginx-1.11.3-alpine.dockerfile
+        image: nginx:1.11.3-alpine
+        volumes:
+            - ./html:/var/www/html:ro
+            - ./nginx/conf/nginx.conf:/etc/nginx/nginx.conf:ro
+            - ./nginx/conf.d:/etc/nginx/conf.d:ro
+        ports:
+            - 80:80
+            - 443:443
+        links:
+            - php
+    
+    php:
+        image: php:7.0.9-fpm-alpine
+        volumes:
+            - ./html:/var/www/html
+        links:
+            - db
+    
+    db:
+        image: mariadb:10.1.16
+        volumes:
+            - /var/lib/mysql:/var/lib/mysql
+        env_file:
+            - ./mariadb.config.env
