--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,8 @@ services:
             - ./html:/var/www/html
         links:
             - db
+        env_file:
+            - ./php.config.env
     
     db:
         image: mariadb:10.1.16
