--- a/nginx/conf/nginx.conf
+++ b/nginx/conf/nginx.conf
@@ -1,20 +1,24 @@
 user www-data;
 worker_processes  1;
 
-#error_log  logs/error.log;
-#error_log  logs/error.log  notice;
-#error_log  logs/error.log  info;
-
-#pid        logs/nginx.pid;
+daemon off;
 
 events {
 	worker_connections  1024;
 }
 
+error_log  /var/log/nginx/error.log warm;
+pid        /var/run/nginx.pid;
 
 http {
 	include			/etc/nginx/mime.types;
 	default_type	application/octet-stream;
+
+    log_format main '$remote_addr - $remote_user [$time_local] "$request" '
+	    '$status $body_bytes_sent "$http_referer" '
+		'"$http_user_agent" "$http_x_forwarded_for"';
+
+	access_log  /var/log/nginx/access.log main;
 
 	keepalive_timeout	65;
 
@@ -27,4 +31,4 @@ http {
 	}
 
 	include		/etc/nginx/conf.d/site-enabled/*.conf;
-								   }
+}
