--- a/nginx/conf/nginx.conf
+++ b/nginx/conf/nginx.conf
@@ -1,24 +1,17 @@
-user www-data;
 worker_processes  1;
-
-daemon off;
 
 events {
 	worker_connections  1024;
 }
 
-error_log  /var/log/nginx/error.log warm;
+error_log  /var/log/nginx/error.log;
 pid        /var/run/nginx.pid;
 
 http {
 	include			/etc/nginx/mime.types;
 	default_type	application/octet-stream;
 
-    log_format main '$remote_addr - $remote_user [$time_local] "$request" '
-	    '$status $body_bytes_sent "$http_referer" '
-		'"$http_user_agent" "$http_x_forwarded_for"';
-
-	access_log  /var/log/nginx/access.log main;
+	access_log  /var/log/nginx/access.log;
 
 	keepalive_timeout	65;
 
